--- a/styles/style.css
+++ b/styles/style.css
@@ -76,6 +76,10 @@ aside {
   font-size: 20px;
   color: #000000;
 }
+.blog button{
+  background: #dd0000;
+  color: #ffffff;
+}
 .all-blogs {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
