--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@ body {
   box-sizing: border-box;
 }
 .container {
-  max-width: 1321px;
+  max-width: 1331px;
   margin: 50px auto;
 }
 .primary-btn {
@@ -167,6 +167,77 @@ hr {
 /* media query */
 /* mobile devices */
 @media only screen and (max-width: 688px) {
+  .container {
+    width: 95%;
+  }
+  .top-banner {
+    flex-direction: column;
+  }
+  .banner-title {
+    font-size: 22px;
+    line-height: 33px;
+    width: 228px;
+    height: 66px;
+    margin: 50px 0;
+  }
+  .banner-detail {
+    width: 258px;
+    height: 100px;
+  }
+  .banner-detail p {
+    font-size: 14px;
+    line-height: 24px;
+  }
+  .primary-btn {
+    margin-top: 50px;
+  }
+  .banner-thumbnail img {
+    margin-top: 20px;
+    width: 233px;
+    height: 245px;
+  }
+  .blogs {
+    display: flex;
+    flex-direction: column;
+  }
+  aside {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    margin: auto;
+    text-align: center;
+    background: white;
+  }
+  .upcoming-match button,
+  .all-group button,
+  .blog button {
+    border: 1px solid rgb(207, 207, 207);
+  }
+  .all-blogs {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .single-blog {
+    width: 100%;
+    height: 100%;
+  }
+  footer {
+    margin: 0;
+    padding: 0 0 200px 0;
+  }
+  .footer-items {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    justify-content: center;
+    align-items: center;
+    width: 340px;
+    height: 300px;
+  }
+  .footer-title {
+    padding-top: 100px;
+  }
+  hr {
+    width: 335px;
+  }
 }
 /* tablet devices */
 @media only screen and (min-width: 689px) and (max-width: 992px) {
@@ -176,6 +247,8 @@ hr {
   .banner-title {
     font-size: 25px;
     line-height: 50px;
+    width: 289px;
+    height: 150px;
   }
   .banner-detail {
     width: 316px;
@@ -194,60 +267,46 @@ hr {
   .primary-btn {
     width: 161px;
     height: 48px;
+    margin-bottom: 10px;
   }
-}
-
-/* @media only screen and (max-width: 688px) {
-  .container {
-    width: 100%;
-  }
-  .top-banner {
+  .blogs {
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
+    padding-bottom: 150px;
   }
-  .top-banner .banner-thumbnail img {
-    width: 100%;
-    background: none;
-  }
-  .brand {
+  aside {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    align-items: center;
-    justify-content: center;
-  }
-  .brand img {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 13%;
     margin: 10px auto;
+    background-color: white;
+    height: 100px;
   }
-  .card-collection {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
+  .upcoming-match button,
+  .all-group button,
+  .blog button {
+    border: 1px solid rgb(237, 234, 234);
+    border-radius: 5px;
+    width: 230px;
+    height: 64px;
   }
-  .feature {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-}
-/* Tablet Devices
-@media only screen and (min-width: 689px) and (max-width: 992px) {
-  .container {
-    width: 90%;
-    padding: 10px;
-  }
-  .top-banner {
-    display: flex;
-    flex-direction: column-reverse;
-  }
-  .brand, .card-collection {
+  .all-blogs {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    align-items: center;
-    justify-content: center;
+    margin: 0 auto;
+    gap: 2% 7%;
   }
-  .feature {
-    display: flex;
-    flex-direction: column;
+  .single-blog {
+    width: 357px;
+    height: 414.21px;
+  }
+  hr {
+    width: 734px;
+  }
+  .footer-items {
+    width: 635px;
+    height: 100px;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
   }
 }
- */
