--- a/styles/website-2.css
+++ b/styles/website-2.css
@@ -62,11 +62,11 @@ aside {
   justify-content: center;
   align-items: center;
 }
-.blogs {
+.matches {
   display: flex;
   gap: 20px;
 }
-.blogs button {
+.matches button {
   width: 256px;
   height: 64px;
   background: #ffffff;
@@ -76,11 +76,36 @@ aside {
   font-size: 20px;
   color: #000000;
 }
-.blog button {
+.upcoming-match button {
   background: #dd0000;
   color: #ffffff;
 }
-.all-blogs {
+.all-matches {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+.match {
+  width: 312px;
+  height: 180px;
+  border: 1px solid rgb(224, 221, 221);
+  border-radius: 10px;
+  text-align: center;
+}
+.flags {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 7%;
+    margin-top: 20px;
+}
+.match img {
+  width: 93px;
+  height: 56px;
+}
+/* .all-blogs {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   justify-content: center;
@@ -129,7 +154,7 @@ aside {
   display: flex;
   align-items: center;
   justify-content: center;
-}
+} */
 /* blog styles end */
 /* footer styles */
 footer {
@@ -196,7 +221,7 @@ hr {
     width: 233px;
     height: 245px;
   }
-  .blogs {
+  .matches {
     display: flex;
     flex-direction: column;
   }
@@ -212,14 +237,22 @@ hr {
   .blog button {
     border: 1px solid rgb(207, 207, 207);
   }
-  .all-blogs {
+  .all-matches {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .match {
+    width: 100%;
+    height: 100%;
+  }
+  /* .all-blogs {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
   }
   .single-blog {
     width: 100%;
     height: 100%;
-  }
+  } */
   footer {
     margin: 0;
     padding: 0 0 200px 0;
@@ -269,10 +302,10 @@ hr {
     height: 48px;
     margin-bottom: 10px;
   }
-  .blogs {
+  .matches {
     display: flex;
     flex-direction: column;
-    padding-bottom: 150px;
+    padding-bottom: 30px;
   }
   aside {
     display: grid;
@@ -290,15 +323,14 @@ hr {
     width: 230px;
     height: 64px;
   }
-  .all-blogs {
+  .all-matches {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     margin: 0 auto;
-    gap: 2% 7%;
   }
-  .single-blog {
+  .match {
     width: 357px;
-    height: 414.21px;
+    height: 200px;
   }
   hr {
     width: 734px;
